--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "14.2.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.2.1",
     "react-multi-carousel": "^2.8.5",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
