--- a/client/package.json
+++ b/client/package.json
@@ -11,10 +11,15 @@
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@tanstack/react-query": "^5.51.11",
+    "@tanstack/react-query-devtools": "^5.51.11",
+    "audit": "^0.0.6",
+    "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
     "embla-carousel-react": "^8.1.5",
+    "fix": "^0.0.6",
     "lucide-react": "^0.399.0",
     "next": "14.2.2",
     "next-auth": "^4.24.7",
@@ -23,7 +28,7 @@
     "react-icons": "^5.2.1",
     "react-multi-carousel": "^2.8.5",
     "react-toastify": "^10.0.5",
-    "sweetalert2": "^11.12.3",
+    "sweetalert2": "^11.6.13",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
   },
