--- a/client/package.json
+++ b/client/package.json
@@ -19,11 +19,12 @@
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
     "embla-carousel-react": "^8.1.5",
-    "fix": "^0.0.6",
+    "fix": "^0.0.3",
     "lucide-react": "^0.399.0",
     "next": "14.2.2",
     "next-auth": "^4.24.7",
     "react": "^18",
+    "react-calendar": "^5.0.0",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "react-multi-carousel": "^2.8.5",
