--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "react-multi-carousel": "^2.8.5",
+    "react-spinners": "^0.14.1",
     "react-toastify": "^10.0.5",
     "sweetalert2": "^11.6.13",
     "tailwind-merge": "^2.3.0",
