--- a/client/.env
+++ b/client/.env
@@ -5,4 +5,4 @@ GITHUB_ID = Ov23liZavfjyLiOxi5FU
 GOOGLE_ID = 40199100104-i7ng0ifjirotdp3ldcrndj1evbpp14pr.apps.googleusercontent.com
 GOOGLE_SECRET = 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
 
-NEXT_PUBLIC_URL = "http://localhost:8080/api/"
+NEXT_PUBLIC_URL = "http://localhost:8080/api"
