maka add image yehey!

--- a/client/.env
+++ b/client/.env
@@ -1,8 +1,6 @@
-NEXTAUTH_SECRET = bOnjBu+996KTkW8KGQC7GwlpCiPqSEoIdOvQhyJEL2gT
-GITHUB_SECRET = 638273ce8ec1b4717c49c9e166a8fb734e2a9c0c
-GITHUB_ID = Ov23liZavfjyLiOxi5FU
 
-GOOGLE_ID = 40199100104-i7ng0ifjirotdp3ldcrndj1evbpp14pr.apps.googleusercontent.com
-GOOGLE_SECRET = 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
+GOOGLE_CLIENT_ID = 898701916222-hr61otjbbs36gelfnfm8q2ln4m44e1f8.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET = 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
 
 NEXT_PUBLIC_URL = "http://localhost:8080/api"
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME = 'dgxlqujte'
