--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "lucide-react": "^0.399.0",
     "next": "14.2.2",
     "next-auth": "^4.24.7",
+    "next-cloudinary": "^6.7.0",
     "react": "^18",
     "react-calendar": "^5.0.0",
     "react-dom": "^18",
