--- a/client/package.json
+++ b/client/package.json
@@ -27,11 +27,13 @@
     "next-cloudinary": "^6.7.0",
     "react": "^18",
     "react-calendar": "^5.0.0",
+    "react-date-picker": "^11.0.0",
     "react-dom": "^18",
     "react-hook-form": "^7.52.2",
     "react-icons": "^5.2.1",
     "react-multi-carousel": "^2.8.5",
     "react-spinners": "^0.14.1",
+    "react-time-picker": "^7.0.0",
     "react-toastify": "^10.0.5",
     "sweetalert2": "^11.6.13",
     "tailwind-merge": "^2.3.0",
