add login function(not done)

--- a/server/.env
+++ b/server/.env
@@ -3,3 +3,5 @@ HOST = 'localhost'
 USER =  'root'
 DATABASE = 'brtgy_draft'
 PASSWORD = 'cutamora123'
+
+JWT_SECRET = "Ar9kTYTE2Xg9nOsoSeVBXGBe4Z02aqaT0Uww299QqZo="
