--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^16.4.5",
     "embla-carousel-react": "^8.1.5",
     "fix": "^0.0.3",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.399.0",
     "next": "14.2.2",
     "next-auth": "^4.24.7",
@@ -41,6 +42,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
