--- a/client/package.json
+++ b/client/package.json
@@ -18,17 +18,21 @@
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "embla-carousel-react": "^8.1.5",
     "fix": "^0.0.3",
     "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.399.0",
     "next": "14.2.2",
     "next-auth": "^4.24.7",
     "next-cloudinary": "^6.7.0",
+    "primereact": "^10.8.2",
     "react": "^18",
     "react-calendar": "^5.0.0",
     "react-date-picker": "^11.0.0",
+    "react-day-picker": "^9.0.9",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.2.1",
@@ -43,6 +47,7 @@
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
