--- a/server/.env
+++ b/server/.env
@@ -5,3 +5,5 @@ DATABASE = 'brtgy_draft'
 PASSWORD = 'cutamora123'
 
 JWT_SECRET = "Ar9kTYTE2Xg9nOsoSeVBXGBe4Z02aqaT0Uww299QqZo="
+
+MAILER_PASS = "qdvb yeua guto rtgb"
