--- a/client/package.json
+++ b/client/package.json
@@ -43,6 +43,7 @@
     "sweetalert2": "^11.14.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "universal-cookie": "^7.2.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
