--- a/client/package.json
+++ b/client/package.json
@@ -17,8 +17,10 @@
     "@tanstack/react-query-devtools": "^5.51.11",
     "audit": "^0.0.6",
     "axios": "^1.7.2",
+    "chart.js": "^4.4.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "crypto-js": "^4.2.0",
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "embla-carousel-react": "^8.1.5",
@@ -32,6 +34,7 @@
     "primereact": "^10.8.2",
     "react": "^18",
     "react-calendar": "^5.0.0",
+    "react-chartjs-2": "^5.2.0",
     "react-date-picker": "^11.0.0",
     "react-day-picker": "^9.0.9",
     "react-dom": "^18",
