minor changes, add forgot password

--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^16.4.5",
     "embla-carousel-react": "^8.1.5",
     "fix": "^0.0.3",
+    "framer-motion": "^11.11.17",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.399.0",
