--- a/client/.env
+++ b/client/.env
@@ -5,3 +5,4 @@ GOOGLE_CLIENT_SECRET = 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
 NEXT_PUBLIC_URL = "http://localhost:8080/api"
 NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME = 'dgxlqujte'
 NEXT_PUBLIC_SECRET = 96iNWEnR7JrkYJih5c2j97wb43zieiBf
+NEXT_PUBLIC_GMAP_APIKEY =  "AIzaSyA4UXGuiX8zuYpq5Iq_4WuuklpsofcM9jc"
