--- a/server/.env
+++ b/server/.env
@@ -2,8 +2,9 @@ PORT = 8080
 HOST = 'localhost'
 USER =  'root'
 DATABASE = 'brtgy_draft'
-PASSWORD = 'password123'
+PASSWORD = 'cutamora123'
 
 JWT_SECRET = "Ar9kTYTE2Xg9nOsoSeVBXGBe4Z02aqaT0Uww299QqZo="
 
 MAILER_PASS = "qdvb yeua guto rtgb"
+MAILER_EMAIL = "lemonjuzz360@gmail.com"
